# Programowanie-Algorytmow

./: CMakeLists.txt  README.md  main.cpp
PAMSI/include/data_structures/: list.hpp  map.hpp  priority_queue.hpp  queue.hpp  stack.hpp
PAMSI/src/: test_data_structures.cpp  test_stl_data_structures.cpp
PAMSIGrafy/: CMakeLists.txt
PAMSIGrafy/data/graph/: a.txt
PAMSIGrafy/include/graphs/: adjacency_list_graph.hpp  adjacency_matrix_graph.hpp  graph.hpp  shortest_path_algorithms.hpp
PAMSIGrafy/src/: adjacency_list_graph.cpp  adjacency_matrix_graph.cpp  main.cpp  shortest_path_algorithms.cpp  test_graphs.cpp  timer.cpp
Tic_Tac_toe/: CMakeLists.txt  kompilacja.txt
Tic_Tac_toe/inc/: menu.hpp  plansza.hpp  sdl.hpp  zmienne_globalne.hpp
Tic_Tac_toe/src/: a.out  main.cpp  menu.cpp  plansza.cpp
gra/: CMakeLists.txt
gra/include/game/: Kon.hpp  Pion.hpp  Stan.hpp  button.hpp  dane.hpp  dane2.hpp  element.hpp  goniec.hpp  grafika.hpp  gui.hpp  krol.hpp  krolowa.hpp  pionek.hpp  plansza.hpp  wieza.hpp  zasady.hpp
gra/src/: .#gui.cpp  Kon.cpp  Pion.cpp  Stan.cpp  button.cpp  element.cpp  goniec.cpp  grafika.cpp  krol.cpp  krolowa.cpp  main.cpp  pionek.cpp  plansza.cpp  wieza.cpp  zasady.cpp
sortowanie/include/sorting/: sorting.hpp
sortowanie/src/: sorting.cpp  sorting_performance.cpp  test_sorting.cpp
src/: main.cpp
src/ut/: Gcd.cpp  Vector.cpp  main.cpp
